--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
       </nav>
     </div>
     <!--LOGO-->
-    <div class="row">
-      <div class="col-12 text-center">
-        <img src="logogenuino.png" width="400px" alt="logo de genuino">
+    <section>
+      <div class="row">
+        <div class="col-12 text-center">
+          <img class="logo" src="logogenuino.png" width="75%" alt="logo de genuino">
+        </div>
       </div>
-    </div>
+    </section>
   </header>
   <main>
 
@@ -77,7 +79,7 @@
         </div>
     </section>
     <!--MAPA-->
-    <section class="mapa">
+    <section>
       <div class="row">
         <div class="col-12 text-center">
           <iframe
