--- a/menu.html
+++ b/menu.html
@@ -48,15 +48,17 @@
 
     <!--LOGO-->
     <div class="row">
-      <a id="nav" class="navbar-nav" href="index.html">
-        <img src="logogenuino.png" width="400px" alt="logo genuino">
+      <a class="navbar-nav" href="index.html">
+        <div class="col-12 text-center">
+          <img class="logo" src="logogenuino.png" width="75%" alt="logo genuino">
+        </div>
     </div>
 
     <!--MENU IMAGEN-->
     <section class="menu">
         <div class="row">
           <div class="col-12 text-center">
-            <img src="menu-genuino.png" width="75%" alt="MENÚ GENUINO">
+            <img class="carta" src="menu-genuino.png" width="100%" alt="MENÚ GENUINO">
           </div>
         </div>
     </section>
