--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section>
       <div class="row">
         <h4 class="col-12 text-center">
-          VENÍ POR TU CAFÉ GENUINO, TE ESPERAMOS!
+          VENÍ POR TU CAFÉ GENUINO!
         </h4>
       </div>
     </section>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <h5>
-            Encontranos en:
+            TE ESPERAMOS EN:
           </h5>
         </div>
     </section>
