--- a/index.html
+++ b/index.html
@@ -4,30 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <!--RESPONSIVE-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--SEO-->
+  <meta name="description" content="Genuino -Coffee Break- Cafetería de Especialidad">
+  <meta name="keywords" content="ubicación genuino, cordón, montevideo, cafe de especialidad, cafetería">
+
   <!--FAVICON-->
   <link rel="shortcut icon" href="./favicon-32x32.png">
+
   <!--ETIQUETA TITULO-->
   <title>Genuino -Coffee Break-</title>
+
   <!--TIPOGRAFIA Montserrat Medium-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
   <!--TIPOGRAFIA Montserrat-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
   <!--CSS BOOTSRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <!--ESTILO DE MI PAGINA-->
   <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body class="conteiner">
+
   <!--ENCABEZADO DE MI PAGINA-->
   <header>
+
     <!--NAVBAR-->
     <div class="nav-principal">
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -44,11 +57,12 @@
       </div>
       </nav>
     </div>
+
     <!--LOGO-->
     <section>
       <div class="row">
         <div class="col-12 text-center">
-          <img class="logo" src="logogenuino.png" width="75%" alt="logo de genuino">
+          <img class="logo" src="logogenuino.png" width="80%" alt="logo de genuino">
         </div>
       </div>
     </section>
@@ -58,7 +72,7 @@
     <!--FOTO ENCABEZADO-->
     <section>
       <div>
-          <img src="main.jpg" alt="main" width="100%">
+        <img src="main.jpg" alt="main" width="100%">
       </div>
     </section>
 
@@ -78,6 +92,7 @@
           </h5>
         </div>
     </section>
+
     <!--MAPA-->
     <section>
       <div class="row">
