--- a/menu.html
+++ b/menu.html
@@ -4,23 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <!--RESPONSIVE-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--SEO-->
+  <meta name="description" content="Genuino -Coffee Break- Cafetería de Especialidad">
+  <meta name="keywords" content="ubicación genuino, cordón, montevideo, cafe de especialidad, cafetería">
+
   <!--FAVICON-->
   <link rel="shortcut icon" href="./favicon-32x32.png">
+
   <!--ETIQUETA TITULO-->
   <title>Menú Genuino</title>
+
   <!--TIPOGRAFIA Montserrat Medium-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
   <!--TIPOGRAFIA Montserrat-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
   <!--CSS BOOTSRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <!--ESTILO DE MI PAGINA-->
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -29,6 +40,7 @@
   <!--ENCABEZADO DE MI PAGINA-->
   <main>
     <header>
+
       <!--NAVBAR-->
       <div class="nav-principal">
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -56,11 +68,11 @@
 
     <!--MENU IMAGEN-->
     <section class="menu">
-        <div class="row">
-          <div class="col-12 text-center">
-            <img class="carta" src="menu-genuino.png" width="100%" alt="MENÚ GENUINO">
-          </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <img class="carta" src="menu-genuino.png" width="100%" alt="MENÚ GENUINO">
         </div>
+      </div>
     </section>
   </main>
 
