--- a/novedades.html
+++ b/novedades.html
@@ -4,113 +4,93 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <!--RESPONSIVE-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--SEO-->
+    <meta name="description" content="Novedades sobre el café de especialidad. Genuino -Coffee Break-">
+    <meta name="keywords" content="novedades del café de especialidad, montevideo, curiosidades del café, mejor café">
+
   <!--FAVICON-->
   <link rel="shortcut icon" href="./favicon-32x32.png">
+
   <!--ETIQUETA TITULO-->
-  <title>Genuino -Coffee Break-</title>
+  <title>Novedades Genuinas</title>
+
+  <!--TIPOGRAFIA Montserrat Medium-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
   <!--TIPOGRAFIA Montserrat-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <!--TIPOGRAFIA Montserrat Ligth-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
   <!--CSS BOOTSRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <!--ESTILO DE MI PAGINA-->
   <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body>
+<body class="conteiner">
   <!--ENCABEZADO DE MI PAGINA-->
-  <main class="conteiner">
-    <header>
-      <!--NAVBAR-->
-      <div class="nav-principal">
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse show" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active text-light" href="filosofia.html">FILOSOFÍA</a>
-            <a class="nav-link active text-light" href="tipscafeteros.html">TIPS CAFETEROS</a>
-            <a class="nav-link active text-light" href="novedades.html">NOVEDADES</a>
+  <header>
+
+    <!--NAVBAR-->
+    <div class="nav-principal">
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse show" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active text-black" href="cafe.html">CAFÉ DE ESPECIALIDAD</a>
+          <a class="nav-link active text-black" href="menu.html">MENÚ</a>
+          <a class="nav-link active text-black" href="tipscafeteros.html">TIPS CAFETEROS</a>
+        </div>
+      </div>
+      </nav>
+    </div>
+  </header>
+
+      <!--LOGO-->
+  <section>
+      <div class="row">
+        <a class="navbar-nav" href="index.html">
+          <div class="col-12 text-center">
+            <img class="logo" src="logogenuino.png" width="75%" alt="logo genuino">
           </div>
-        </div>
-        </nav>
       </div>
-    </header>
-    <!--LOGO-->
+  </section>
+
+  <section class="novedades">
     <div class="row">
-      <div class="col-12 text-center">
-        <img src="logogenuino.png" width="400px" class="logo-principal" alt="logo de genuino">
-      </div>
-    </div>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="img-fluid w-30" src="Capture1.PNG" alt="Croissant">
-        </div>
-        <div class="carousel-item">
-          <img class="img-fluid w-30" src="Capture2.PNG" alt="Café">
-        </div>
-        <div class="carousel-item">
-          <img class="img-fluid w-30" src="Capture3.PNG" alt="Focaccia">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <h2 class="col-12 bg-black text-white text-center" id="novedades">
-        NOVEDADES
-      </h2>
-    </div>
-    <div class="row">
-      <div class="col-4 p-5 text-center">
+      <div class="col-12 p-5 text-center">
         <h5>5 DE JUNIO DIA MUNDIAL DEL MEDIO AMBIENTE</h5>
-        <img src="D_NQ_NP_933233-MLU43917074284_102020-V.jpg" width="150px" alt="expo">
+        <img src="D_NQ_NP_933233-MLU43917074284_102020-V.jpg" width="150px" alt="medio ambiente">
         <p>
           Dale! apoyemos todos al Medio Ambiente, trae tu vaso/taza y te descontamos el 10%.
           Igualmente en GENUINO todos nuestros envases son compostables o reciclables.
         </p>
       </div>
-      <div class="col-4 p-5 text-center">
+      <div class="col-12 p-5 text-center">
         <h5> 1 DE OCTUBRE DÍA INTERNACIONAL DEL CAFÉ</h5>
-        <img src="tuestedelcafe.jpg" width="150px" alt="dia inter. del café">
+        <img src="tuestedelcafe.jpg" width="150px" alt="día internacional del café">
         <p>
           Con el objetivo de rendir homenaje al café, una de las bebidas más consumidas y populares del mundo. También
           es una oportunidad para promover prácticas cafeteras más sostenibles y para visibilizar la difícil situación
           de los productores de café en el mundo.
         </p>
-        <h6>CURIOSIDADES:</h6>
-        <p>
-          El café es la segunda bebida más consumida en el mundo después del agua.
-          Todos los días en el mundo se consumen aproximadamente 3 mil millones de tazas de café.
-          El lugar donde se consume más café es en los países nórdicos.
-          El nombre café proviene de la palabra árabe "Qahhwat Al-bun", que significa "vino del grano".
-          En realidad, el grano del café es la semilla de la fruta del árbol de cafeto, un árbol que puede llegar a
-          medir hasta 6 metros de altura.
-          Se ha demostrado que consumir café puede acelerar el metabolismo de una persona entre un 3% a un 11%.
-          Es el segundo producto más comercializado del mundo junto con la Coca Cola.
-          Brasil es el mayor productor de café de todo el mundo. Su cosecha equivale al 30,16% del café mundial.
-          El 54% de los estadounidenses consumen café todos los días. Lo que convierte a los Estados Unidos en el país
-          donde se toma más café.
-          Corea y Japón hay cafés temáticos, sobre animes y doramas populares. Pero también existen los cafés de gatos,
-          donde además de tomarte una deliciosa taza de esta bebida, también puedes acariciar a un lindo gatito.
-          En Japón también existe un café que posee una piscina donde bañarte en esta bebida, el nombre del lugar es
-          Yunessun Spa Resort.
-          Como último dato interesante, en Francia hay una cafetería donde si no muestras modales, como decir hola al
-          llegar y pedir por favor, el café te cuesta un poco más.
-        </p>
+  
       </div>
-      <div class="col-4 p-5 text-center">
+      <div class="col-12 p-5 text-center">
         <h5>EXPO DE CAFÉ DE ESPECIALIDAD 2022</h5>
-        <img src="scaled_768.jpg" width="150px" alt="expo">
+        <img src="scaled_768.jpg" width="150px" alt="expo café">
         <p>
           Del 8 al 10 de abril de 2022, la Specialty Coffee Expo se dirigirá a la ciudad de Boston, Massachusetts, para
           la reunión más grande de profesionales de cafés especiales de América del Norte.
@@ -123,28 +103,23 @@
         </p>
       </div>
     </div>
+  </section>
 
-
-    <footer>
-      <div>
-        <nav class="navbar navbar-expand-lg navbar-black bg-black">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="ubicación.html">UBICACIÓN</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <a class="navbar-brand" href="horarioycontacto.html">HORARIO Y CONTACTO</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-        </nav>
+  <footer>
+    <div class="nav-principal">
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse show" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active text-black" href="filosofia.html">FILOSOFÍA</a>
+          <a class="nav-link active text-black" href="horarioycontacto.html">HORARIO Y CONTACTO</a>
+        </div>
       </div>
-    </footer>
-  </main>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
   </script>
